--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     outline: 0;
+    font-family: "Bebas Neue", serif;
 }
 a,a:hover{
     text-decoration: none;
@@ -103,4 +104,90 @@ body {
     padding: 50px;
     background: #F2F7A1;
     border-radius: 10px;
+}
+
+#videopart{
+  background: url(../images/videopart.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.overlay{
+  background: #0c448893;
+  padding: 300px 0;
+}
+.play i{
+  font-size: 50px;
+  color: #E2DFD0;
+}
+.winningYear{
+
+  font-weight: 400;
+  color: #E2DFD0;
+  padding-top: 20px;
+}
+.typed::after {
+	content: '|';
+	display: inline;
+	-webkit-animation: blink 0.7s infinite;
+	-moz-animation: blink 0.7s infinite;
+	animation: blink 0.7s infinite;
+}
+
+/*Removes cursor that comes with typed.js*/
+.typed-cursor{
+   opacity: 0;
+	display: none;
+}
+/*Custom cursor animation*/
+@keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+}
+@-webkit-keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+}
+@-moz-keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+}
+
+.btns {
+	display: block;
+	width: 400px;
+	margin: 0;
+	padding: 30px 0 0 30px;
+}
+.btns a {
+	display: inline-block;
+	margin-left: 5px;
+}
+.btns a:first-child{margin-left:0}
+.btn {
+	font-family: sans-serif;
+	font-size: 14px;
+	font-weight: 600;
+	color: #ecf0f1;
+	text-decoration: none;
+}
+a .btn {
+	cursor: pointer;
+	border: 1.5px solid #ecf0f1;
+	border-radius: 5px;
+	display: inline-block;
+	padding: 10px;
+	list-style-type: none;
+	transition: all .3s;
+}
+
+.btn:hover {
+	background: #ecf0f1;
+	color: #34495e;
+}
+.typed{
+  color: #F2F7A1;
 }
